--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [
      {
-       "matches": ["http://www.google.com.hk/*"],
+       "matches": ["https://*/*","http://*/*"],
        "css": ["default.css"],
        "js": ["jquery-2.0.3.min.js","addLayer.js"]
      }
