--- a/plugins/chrome/manifest.json
+++ b/plugins/chrome/manifest.json
@@ -1,11 +1,11 @@
 {  
-  "name": "handlylink",  
+  "name": "handylink",  
   "version": "0.1.0",
   "manifest_version": 2,
   "description": "display relation url on the margin of the web page when you are browsing.",  
   "browser_action": {
     "default_icon": "icon.png" ,
-    "default_title": "handlylink",
+    "default_title": "handylink",
     "default_popup": "popup.html"
   },
   "content_scripts": [
