--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "ylwwin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "session-file-store": "^1.2.0"
   }
 }
